--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,11 @@ a:hover{
   padding: 5px 0 20px 20px;
 }
 
-.petfinder, .lyricist, .rooms, .ga, .scsu{
+.petfinder, .lyricist, .rooms{
   padding: 5px 0 20px 20px;
+}
+.ga, .scsu{
+  padding: 5px 0 10px 20px;
 }
 .profile{
   letter-spacing: .02em;
