--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,38 @@ a{
   color: grey;
 }
 a:visited, a:active{
-  color: grey;
+text-decoration: none;
 }
 a:hover{
   color: #29a0da;
   /*color: tomato;*/
+}
+#email, #phone{
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+@media (max-width: 768px)  {
+  #email, #phone{
+    font-size: 14px;
+  }
+  .tag{
+    font-size: 16px;
+  }
+}
+@media (min-width: 320px) and (max-width:760px) {
+  #email, #phone,{
+    font-size: 20px;
+  }
+  .tag{
+    font-size: 12px;
+  }
+  .title{
+    font-size: 47px;
+  }
+}
+#email:hover, #phone:hover{
+  color: #000;
 }
 .myinfo{
   padding: 0 0 0 10px;
